working solution for subs